CurrencyController works. Create, Read, Update works

--- a/CurrencyApi/CurrencyApi/appsettings.json
+++ b/CurrencyApi/CurrencyApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+     "CurrencyDbContext": "Data Source=LAPTOP-MEP7OSAJ\\SQLEXPRESS;Initial Catalog=dtbankdb;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
