--- a/CurrencyApi/CurrencyApi/appsettings.json
+++ b/CurrencyApi/CurrencyApi/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-     "CurrencyDbContext": "Data Source=LAPTOP-MEP7OSAJ\\SQLEXPRESS;Initial Catalog=dtbankdb;Integrated Security=True"
+    //"CurrencyDbContext": "Data Source=LAPTOP-MEP7OSAJ\\SQLEXPRESS;Initial Catalog=dtbankdb;Integrated Security=True",
+    "AzureDbContext": "Data Source=digitrade.database.windows.net;Initial Catalog=DTBankDB;User ID=admin.digitrade;Password=*DTBankDB*"
   },
   "Logging": {
     "LogLevel": {
